added phone + footer

--- a/src/app/contact-taker/contact-taker.component.html
+++ b/src/app/contact-taker/contact-taker.component.html
@@ -14,7 +14,7 @@
 
     <mat-form-field class="example-full-width" appearance="fill">
         <mat-label>Phone</mat-label>
-        <input matInput placeholder="9874563210">
+        <input matInput placeholder="9874563210" [(ngModel)]="contact.cphone">
     </mat-form-field>
 
     <mat-form-field class="example-full-width" appearance="fill">
