--- a/src/app/contact-viewer/contact-viewer.component.html
+++ b/src/app/contact-viewer/contact-viewer.component.html
@@ -2,7 +2,7 @@
     <mat-card *ngFor = "let contact of carray">
         <mat-card-title>{{contact.cname}}</mat-card-title>
         <mat-card-subtitle>{{contact.cemail}}</mat-card-subtitle>
-        <mat-card-subtitle>phone</mat-card-subtitle>
+        <mat-card-subtitle>{{contact.cphone}}</mat-card-subtitle>
         <mat-card-subtitle>{{contact.caddr}}</mat-card-subtitle>
     </mat-card>
     
