--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<p>
+    <mat-toolbar color="primary">
+        <span> &copy; Created by Pranav Z</span>
+    </mat-toolbar>
+</p>
