--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -10,3 +10,9 @@
     padding: 1vw;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
+
+small{
+    display: block;
+    color: red;
+    font-size: italic;
+}
