--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,1 +1,46 @@
-<p>register works!</p>
+<div class="center">
+    <h1>Login</h1>
+
+    <form [formGroup]="registerForm">
+
+        <mat-form-field appearance="fill">
+            <mat-label>User Name</mat-label>
+            <input matInput type="text" formControlName="username">
+        </mat-form-field>
+        <small>
+            {{getUsernameError()}}
+        </small>
+        <br>
+
+        <mat-form-field appearance="fill">
+            <mat-label>Password</mat-label>
+            <input matInput type="text" formControlName="password">
+        </mat-form-field>
+        <small>
+            {{getPasswordError()}}
+        </small>
+        <br>
+
+        <mat-form-field appearance="fill">
+            <mat-label>Confirm Password</mat-label>
+            <input matInput type="text" formControlName="confirmPassword">
+        </mat-form-field>
+        <small>
+            {{getConfirmPasswordError()}}
+        </small>
+        <br>
+
+        <mat-form-field appearance="fill">
+            <mat-label>Email</mat-label>
+            <input matInput type="email" formControlName="email">
+        </mat-form-field>
+        <small>
+            {{getEmailError()}}
+        </small>
+        <br>
+
+
+        <button mat-raised-button color="primary" [disabled]="registerForm.invalid" (click)="register()">Register</button>
+    </form>
+    
+</div>
