added guards and localstorage

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,2 +1,4 @@
+Welcome {{loggedInUser}}. You have logged in at {{loggedInTime }}
+
 <app-contact-taker [carray] = "carray"></app-contact-taker>
 <app-contact-viewer [carray] = "carray"></app-contact-viewer>
