--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -14,7 +14,7 @@
 
         <mat-form-field appearance="fill">
             <mat-label>Password</mat-label>
-            <input matInput type="text" formControlName="password">
+            <input matInput type="password" formControlName="password">
         </mat-form-field>
         <small>
             {{getPasswordError()}}
